@@ -1,3 +1,9 @@
+2011-06-21  Simson Garfinkel  <simsong@imac3.home>
+
+	* hashdeep/files.cpp (state::find_plain_hash): although this function takes the approach of hacking C strings with an axe, it seems to work.
+
+	* hashdeep/main.cpp (algorithm_t::valid_hash): fixed function.
+
 2011-06-20  Simson Garfinkel  <simsong@imac3.home>
 
 	* hashdeep/hash.cpp (hash_file): eliminated by_basename, instead we now use rfind on the string.
